# Netflix-scrapper

./: .gitignore  README.md  SECURITY.md  browser_headers.json  config.yaml  cookies.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/netflix_scraper/: browser.py  cli.py  config.py  cookies.json  downloader.py  exceptions.py  human_behavior.py  installer.py  logger.py  scraper.py  ui.py  utils.py
