[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netflix-scrapper"
version = "1.0.7"
description = "A powerful CLI tool to download content(Movies/series) from Netflix (net22.cc clone)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ali Hassan", email = "alihassan.shahzadmughal@gmail.com"},
]
dependencies = [
    "playwright>=1.40.0",
    "yt-dlp>=2023.10.13",
    "PyYAML>=6.0.1",
    "tqdm>=4.66.1",
    "m3u8>=4.0.0",
    "requests>=2.31.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Multimedia :: Video",
]
keywords = ["netflix", "scraper", "downloader", "yt-dlp", "playwright"]

[project.urls]
Homepage = "https://github.com/AliHaSSan-13/Netflix-scrapper"
Issues = "https://github.com/AliHaSSan-13/Netflix-scrapper/issues"
Repository = "https://github.com/AliHaSSan-13/Netflix-scrapper"

[project.scripts]
netflix-scrapper = "netflix_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["build/", "dist/", ".venv/", "tests/"]
